--- a/Sistem_informasi_perpustakaan/nbproject/project.properties
+++ b/Sistem_informasi_perpustakaan/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistem_informasi_perpustakaan
 excludes=
+file.reference.JCalendar.jar=lib/JCalendar.jar
+file.reference.mysql-connector-java-8.0.27.jar=lib\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.JCalendar.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
